# FaceSwap

./: .gitignore  LICENSE  Makefile  README.md  config.py  dev_setup.py  download_models.py  face_detection.py  face_detector.py  face_swap.py  face_swapper.py  install.bat  install.sh  install_test_deps.py  main.py  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  setup_models.sh  test_gpu_acceleration.py  test_installation.py
.github/workflows/: build-conda.yml  build-release.yml  test.yml
faceswap_env/: pyvenv.cfg
gui/: __init__.py  face_card.py  main_window.py  progress_dialog.py
models/: README.md
scripts/: build.py  create_release.sh  download_models.py  setup_models.sh
tests/: __init__.py  conftest.py  test_automated_face_detection.py  test_automated_face_swap.py  test_automated_integration.py  test_automated_stress.py  test_core.py  test_face_detection.py  test_face_swapper.py  test_installation.py  test_integration.py  test_performance.py
utils/: __init__.py  blending.py  color_match.py  gpu_utils.py  smoothing.py  video_utils.py  warps.py
